# my

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
database/: database.cpp  database.h
database/lib/: libmysql.lib
front/: login.html  my_orders.html  my_products.html  payment.html  post_product.html  product_details.html  recharge.html  register.html  userinfo.html  welcome.html
server/: server.cpp  server.h
